spring/min-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
      #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: spring-petclinic
              port:
                number: 80
